@@ -1,3 +1,8 @@
+2010-02-28  Paolo Carlini  <paolo.carlini@oracle.com>
+
+       * src/hash-long-double-aux.cc (hash<long double>::
+       operator()(long double)): Hash both -0 and +0 to 0.
+
 2010-02-25  Ed Smith-Rowland  <3dw4rd@verizon.net>
 
 	* include/bits/random.tcc (operator<<): Use max_digits10.
